--- a/css/init.scss
+++ b/css/init.scss
@@ -11,7 +11,7 @@
 
 @import url("https://use.fontawesome.com/releases/v5.6.3/css/all.css");
 @import url("https://radancy.dev/pattern-library/disclosure/init.css");
-@import url("zedburn.css");
+@import url("zenburn.css");
 
 $weight-thin: 100 !default; // Thin (Hairline)
 $weight-extra-thin: 200 !default; // Extra Light (Ultra Light)
