--- a/css/init.scss
+++ b/css/init.scss
@@ -245,7 +245,7 @@ word-wrap: break-word;
   font-size: 1.1rem;
   line-height: 1.8;
 
-    strong {
+    strong, span {
     color: #b4dcf6;
     }
 
