CSS Logical Properties

--- a/css/init.scss
+++ b/css/init.scss
@@ -361,7 +361,7 @@ padding: .5em 1em;
     content: "";
     display: inline-block;
     height: 50px;
-    margin-right: .5em;
+    margin-inline-end: .5em;
     min-width: 50px;
     vertical-align: middle;
     width: 50px;
