--- a/css/init.scss
+++ b/css/init.scss
@@ -350,7 +350,7 @@ padding: .5em 1em;
   color: inherit;
   }
 
-  h2:first-child {
+  h2:first-child, .info-heading {
   display: flex;
   align-items: center;
 
