--- a/css/init.scss
+++ b/css/init.scss
@@ -651,7 +651,7 @@ max-width: 1600px;
 #main-navigation {
 margin-left: 1em;
 position: absolute;
-inset-inline-end: 1em;
+inset-inline-end: .5em;
 inset-block-start: .8em;
 z-index: 2;
 
