--- a/_includes/ui-toc.html
+++ b/_includes/ui-toc.html
@@ -29,7 +29,7 @@
 
     <div class="carousel-scroll__card app-only">
 
-      <h2 id="pattern-library"><a href="/pattern-library/">Pattern Library</a></h2>
+      <h2 id="pattern-library"><a href="/pattern-library/">Component Library</a></h2>
 
       <p>A library of common design patterns, resources, and functional code for use on your next project.</p>
 
