--- a/css/init.scss
+++ b/css/init.scss
@@ -269,8 +269,8 @@ border-collapse: collapse;
   }
 
   th, td {
-  border: 1px $highlight-color solid;
-  padding: .8em;
+  border-bottom: 1px $highlight-color solid;
+  padding: 1em;
 
     code {
     background-color: transparent;
