--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,7 +82,8 @@
   </div>
   {% if page.jquery != false %}
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>{% endif %}{% if page.disclosure %}
-  <script src="{{ site.git-url }}/pattern-library/disclosure/init.js"></script>{% endif %}{% if page.slick %}
+  <script src="{{ site.git-url }}/pattern-library/disclosure/init.js"></script>{% endif %}{% if page.in-page %}
+  <script src="{{ site.git-url }}/pattern-library/in-page/init.js"></script>{% endif %}{% if page.slick %}
   <script src="{{ site.git-url }}/lib/a11y-slick-1.0.1/slick.min.js"></script>{% endif %}
   <script src="{{ site.git-url }}/js/init.js"></script>{% if page.localjs %}
   <script src="{{ page.localjs }}"></script>{% endif %}
