--- a/css/init.scss
+++ b/css/init.scss
@@ -539,7 +539,12 @@ padding: 0;
 background-color: transparent;
 border-radius: 0;
 font-size: inherit;
+margin: 0;
 padding: 0;
+
+  &__nav {
+  margin: 1em 0;
+  }
   
   &__label {
   
