--- a/css/init.scss
+++ b/css/init.scss
@@ -241,6 +241,10 @@ word-wrap: break-word;
   font-size: 1.1rem;
   line-height: 1.8;
 
+    &:empty {
+    display: none;
+    }
+
     strong, span {
     color: #b4dcf6;
     font-weight: bold;
