--- a/css/init.scss
+++ b/css/init.scss
@@ -544,7 +544,10 @@ margin: 0;
 padding: 0;
 
   &__nav {
+  background-color: #eee;
+  border-radius: 5px;
   margin: 1em 0;
+  padding: 1em;
   }
   
   &__label {
