--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,13 @@
     <meta charset="{{ site.charset }}">
     <meta content="width=device-width, initial-scale=1.0, viewport-fit=cover" name="viewport">{% if page.noindex != false %}
     <meta content="noindex, nofollow" name="robots">{% endif %}
-    <meta content="{{ site.theme-color }}" name="theme-color">
-    <link href="{{ site.git-url }}/css/init.css" rel="stylesheet">{% if page.slick %}
-    <link href="{{ site.git-url }}/lib/a11y-slick-1.0.1/slick.min.css" rel="stylesheet">{% endif %}{% if page.localcss %}
+    <meta content="{{ site.theme-color }}" name="theme-color">{% if page.slick %}
+    <link href="{{ site.git-url }}/lib/a11y-slick-1.0.1/slick.min.css" rel="stylesheet">{% endif %}{% if page.disclosure %}
+    <!-- link href="{{ site.git-url }}/pattern-library/disclosure/init.css" rel="stylesheet"-->{% endif %}{% if page.in-page %}
+    <link href="{{ site.git-url }}/pattern-library/in-page/init.css" rel="stylesheet">{% endif %}{% if page.read-more %}
+    <link href="{{ site.git-url }}/pattern-library/read-more/init.css" rel="stylesheet">{% endif %}{% if page.tabcordion %}
+    <link href="{{ site.git-url }}/pattern-library/tabcordion/init.css" rel="stylesheet">{% endif %}
+    <link href="{{ site.git-url }}/css/init.css" rel="stylesheet">{% if page.localcss %}
     <link href="{{ page.localcss }}" rel="stylesheet">{% endif %}
     <link href="{{ site.git-url }}/favicon.ico" rel="icon">
     <link href="{{ site.git-url }}/manifest.json" rel="manifest">
@@ -81,10 +85,12 @@
 
   </div>
   {% if page.jquery != false %}
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>{% endif %}{% if page.disclosure %}
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>{% endif %}{% if page.slick %}
+  <script src="{{ site.git-url }}/lib/a11y-slick-1.0.1/slick.min.js"></script>{% endif %}{% if page.disclosure %}
   <script src="{{ site.git-url }}/pattern-library/disclosure/init.js"></script>{% endif %}{% if page.in-page %}
-  <script src="{{ site.git-url }}/pattern-library/in-page/init.js"></script>{% endif %}{% if page.slick %}
-  <script src="{{ site.git-url }}/lib/a11y-slick-1.0.1/slick.min.js"></script>{% endif %}
+  <script src="{{ site.git-url }}/pattern-library/in-page/init.js"></script>{% endif %}{% if page.read-more %}
+  <script src="{{ site.git-url }}/pattern-library/read-more/init.js"></script>{% endif %}{% if page.tabcordion %}
+  <script src="{{ site.git-url }}/pattern-library/tabcordion/init.js"></script>{% endif %}
   <script src="{{ site.git-url }}/js/init.js"></script>{% if page.localjs %}
   <script src="{{ page.localjs }}"></script>{% endif %}
 
