--- a/css/init.scss
+++ b/css/init.scss
@@ -74,10 +74,10 @@ $font-file-path: "https://tbcdn.talentbrew.com/company/34730/full_v1_0/fonts";
 box-sizing: inherit;
 }
 
-::cue {
+/* ::cue {
 background-color: $highlight-color;
 color: #fff;
-}
+} */
 
 a {
 
