--- a/css/init.scss
+++ b/css/init.scss
@@ -276,6 +276,7 @@ border-collapse: collapse;
     code {
     background-color: transparent;
     color: inherit;
+    font-weight: bold;
     margin: 0;
     padding: 0;
     }
