--- a/css/init.scss
+++ b/css/init.scss
@@ -439,6 +439,12 @@ background-color: #f8924d;
 
 }
 
+.warning {
+background-color: pink;
+border-left: 4px red solid;
+padding: 1em;
+}
+
 .warning-info {
 background-color: #dda1a1;
 border-color: red;
