Path updates, locking down site

--- a/_archive/_layouts/crossover.html
+++ b/_archive/_layouts/crossover.html
@@ -2,8 +2,8 @@
 <html lang="en" class="no-js">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">{% if page.noindex %}
-	  <meta name="robots" content="noindex, nofollow">{% endif %}
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	  <meta name="robots" content="noindex, nofollow">
     <link rel="shortcut icon" href={{ site.git-url }}/tmp-styleguide/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="{{ site.git-url }}/tmp-styleguide/crossover/theme/css/global.min.css">{% if page.localcss %}
 	  <link rel="stylesheet" href="{{ page.localcss }}">{% endif %}
