--- a/_includes/ui-toc.html
+++ b/_includes/ui-toc.html
@@ -21,17 +21,9 @@
 
     <div class="carousel-scroll__card">
 
-      <h2 id="code-review-process"><a href="/uid/code-review/">Code Review Process</a></h2>
-
-      <p>Provides a record of the different resources used to create the code standards guide.</p>
-
-    </div>
-
-    <div class="carousel-scroll__card app-only">
-
       <h2 id="component-library"><a href="/component-library/">Component Library</a></h2>
 
-      <p>A library of common design patterns, resources, and functional code for use on your next project.</p>
+      <p>A library of modular elements you can combine to create website interfaces.</p>
 
     </div>
 
