--- a/css/init.scss
+++ b/css/init.scss
@@ -443,6 +443,11 @@ background-color: #f8924d;
 background-color: pink;
 border-left: 4px red solid;
 padding: 1em;
+
+  p {
+  margin: 0;
+  }
+
 }
 
 .warning-info {
