--- a/css/init.scss
+++ b/css/init.scss
@@ -688,7 +688,7 @@ padding: px(12.8) 8% px(6.4);
 #content, #contentinfo, #contribute {
 display: block;
 color: inherit;
-margin: 0 auto;
+margin: px(32) auto 0;
 max-width: px(1600);
 }
 
