--- a/css/init.scss
+++ b/css/init.scss
@@ -305,6 +305,7 @@ border-collapse: collapse;
   background-color: $highlight-color;
   color: #fff;
   text-align: start;
+  white-space: nowrap;
   }
 
   td:first-child {
