--- a/css/init.scss
+++ b/css/init.scss
@@ -551,7 +551,7 @@ padding: 0;
 
   li {
 
-    @media(min-width: bp(680)) {
+    @media(min-width: em(680)) {
 
       display: inline-block;
 
@@ -578,7 +578,7 @@ margin-bottom: em(48);
   display: block;
   margin: em(5) 0;
 
-    @media(min-width: bp(680)) {
+    @media(min-width: em(680)) {
 
       display: inline-block;
       margin: em(5) em(2.5);
@@ -818,7 +818,7 @@ body:not(#rad-in-page-index) {
     &__label {
     font-weight: normal;
     
-      @media(min-width: bp(778)) {
+      @media(min-width: em(778)) {
   
         display: block;
   
