--- a/css/init.scss
+++ b/css/init.scss
@@ -282,7 +282,7 @@ border-collapse: collapse;
 
   caption {
   color: $highlight-color;
-  font-size: premx(25.6);
+  font-size: rem(25.6);
   text-align: start;
   margin-bottom: em(8);
   }
