--- a/css/init.scss
+++ b/css/init.scss
@@ -427,7 +427,7 @@ color: #000;
 }
 
 .experimental {
-background-color: plum;
+background-color: lighten($highlight-color, 50%);
 border-left: em(4) $highlight-color solid;
 padding: em(16);
     
