--- a/css/init.scss
+++ b/css/init.scss
@@ -812,7 +812,17 @@ body:not(.component-library-disclosure) {
     }
 
     &__select {
+    font-size: inherit;
     min-width: rem(320);
+    padding: em(8);
+    }
+
+    &__content {
+  
+      &:target {
+      scroll-margin-top: calc(190em / 16);
+      }
+  
     }
   
   }
