--- a/css/init.scss
+++ b/css/init.scss
@@ -552,6 +552,7 @@ display: none !important;
   margin-bottom: 0.5em;  
   padding: 1.5em 1em;
   text-decoration: none;
+  width: 100%;
 
     @media(min-width: em(680)) {
 
