--- a/css/init.scss
+++ b/css/init.scss
@@ -560,6 +560,7 @@ margin-top: 2em;
       margin-bottom: 0;
       margin-right: 0.5em;
       min-width: calc(210rem / 16);
+      width: auto;
 
     }
 
