--- a/css/init.scss
+++ b/css/init.scss
@@ -567,7 +567,7 @@ margin: 2em 0;
   color: #000;
   cursor: pointer;
   display: flex;
-  font-size: inherit;
+  font-size: rem(14);
   line-height: 1.2;
   margin-bottom: 0.5em;  
   padding: 1em;
@@ -579,7 +579,6 @@ margin: 2em 0;
       justify-content: center;
       margin-bottom: 0;
       margin-right: 0.5em;
-      min-width: calc(210rem / 16);
       width: auto;
 
     }
@@ -594,12 +593,12 @@ margin: 2em 0;
 
     .icon {
     line-height: 0;
-    margin-inline-end: em(8);
+    margin-inline-end: em(11);
     }
 
     svg {
-    width: rem(18);
-    height: rem(22);
+    width: rem(16);
+    height: rem(16);
     }
 
   }
