--- a/css/init.scss
+++ b/css/init.scss
@@ -156,7 +156,9 @@ margin: em(16) 0;
 
   figcaption {
   font-size: rem(14.4);
-  margin: em(16) 0 0;
+  font-style: italic;
+  line-height: normal;
+  margin: em(8) 0 0;
   }
 
 }
