--- a/css/init.scss
+++ b/css/init.scss
@@ -157,8 +157,7 @@ margin: em(16) 0;
   figcaption {
   font-size: rem(14.4);
   font-style: italic;
-  line-height: normal;
-  margin: em(8) 0 0;
+  margin: em(8) 0;
   }
 
 }
