--- a/css/init.scss
+++ b/css/init.scss
@@ -125,7 +125,7 @@ padding: em(3.2) em(16);
 white-space: nowrap;
 }
 
-code:not(".language-html"):not(".language-html"):not(".language-html")
+// code:not(".language-html"):not(".language-html"):not(".language-html")
 
 code {
 background-color: #333;
