--- a/css/init.scss
+++ b/css/init.scss
@@ -122,7 +122,7 @@ display: inline-block;
 font: inherit;
 margin: em(2);
 padding: em(3.2) em(16);
-white-space: nowrap;
+word-wrap: break-word;
 }
 
 // code:not(".language-html"):not(".language-html"):not(".language-html")
