--- a/css/init.scss
+++ b/css/init.scss
@@ -655,6 +655,11 @@ text-transform: uppercase;
   margin-inline-end: em(11);
   }
 
+  svg {
+  height: rem(16);
+  width: rem(16);
+  }
+
   .icon-check {
   display: none;
   }
