--- a/css/init.scss
+++ b/css/init.scss
@@ -656,6 +656,7 @@ text-transform: uppercase;
   display: inline-block;
   line-height: 0;
   margin-inline-end: em(11);
+  vertical-align: bottom;
   }
 
   svg {
