--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,15 +2,17 @@
 <html lang="{{ site.lang }}" class="no-js">
 <head>
     <meta charset="{{ site.charset }}">
-    <meta content="width=device-width, initial-scale=1.0, viewport-fit=cover" name="viewport">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="noindex, nofollow" name="robots">
     <meta content="{{ site.theme-color }}" name="theme-color">{% if page.slick %}
     <link href="{{ site.git-url }}/lib/a11y-slick-1.0.1/slick.min.css" rel="stylesheet">{% endif %}{% if page.in-page %}
     <link href="{{ site.git-url }}/component-library/in-page/init.css" rel="stylesheet">{% endif %}{% if page.read-more %}
     <link href="{{ site.git-url }}/component-library/read-more/init.css" rel="stylesheet">{% endif %}{% if page.tabcordion %}
     <link href="{{ site.git-url }}/component-library/tabcordion/init.css" rel="stylesheet">{% endif %}
-    <link href="{{ site.git-url }}/css/init.css" rel="stylesheet">{% if page.localcss %}
-    <link href="{{ page.localcss }}" rel="stylesheet">{% endif %}
+    <link href="{{ site.git-url }}/css/init.css" rel="stylesheet">{% if page.librarycss %}
+    <link href="{{ page.librarycss}}" rel="stylesheet">{% endif %}{% if page.localcss %}
+    <link href="{{ page.localcss }}" rel="stylesheet">{% endif %}{% if page.custom %}
+    <link href="{{ page.customcss}}" rel="stylesheet">{% endif %}
     <link href="{{ site.git-url }}/favicon.ico" rel="icon">
     <link href="{{ site.git-url }}/manifest.json" rel="manifest">
     <title>{{ page.title }} - {{ site.company-name }}</title>
@@ -48,18 +50,6 @@
 
       {% endif %}
 
-      {% if page.experimental %}
-
-      <p class="experimental">Experimental</p>
-
-      {% endif %}
-
-      {% if page.warning %}
-
-      <p class="alert"><strong>Warning:</strong> Circumventing limitations present within a pattern is strongly discouraged. If you run into any issues or require a new feature, please <a href="http://jira.tmp.com/browse/{{ page.jira }}">add a comment</a> to already opened ticket. The Pattern Library Team (PLT) will not be responsible for any issues that are created due to workarounds during implementation.</p>
-
-      {% endif %}
-
       {% if page.toc %}
 
       <details class="nav">
@@ -83,15 +73,17 @@
     </footer>
 
   </div>
-  {% if page.jquery != false %}
+  {% if page.jquery == true %}
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>{% endif %}{% if page.slick %}
   <script src="{{ site.git-url }}/lib/a11y-slick-1.0.1/slick.min.js"></script>{% endif %}{% if page.disclosure %}
   <script src="{{ site.git-url }}/component-library/disclosure/init.js"></script>{% endif %}{% if page.in-page %}
   <script src="{{ site.git-url }}/component-library/in-page/init.js"></script>{% endif %}{% if page.read-more %}
   <script src="{{ site.git-url }}/component-library/read-more/init.js"></script>{% endif %}{% if page.tabcordion %}
   <script src="{{ site.git-url }}/component-library/tabcordion/init.js"></script>{% endif %}
-  <script src="{{ site.git-url }}/js/init.js"></script>{% if page.localjs %}
-  <script src="{{ page.localjs }}"></script>{% endif %}
+  <script src="{{ site.git-url }}/js/init.js"></script>{% if page.libraryjs %}
+  <script src="{{ page.libraryjs}}"></script>{% endif %}{% if page.localjs %}
+  <script src="{{ page.localjs }}"></script>{% endif %}{% if page.customjs %}
+  <script src="{{ page.customjs}}"></script>{% endif %}
 
 </body>
 </html>
