--- a/css/init.scss
+++ b/css/init.scss
@@ -959,7 +959,7 @@ body:not(.component-library-disclosure) {
 
     &__select {
     font-size: inherit;
-    min-width: rem(320);
+    // min-width: rem(320);
     padding: em(8);
     }
 
