--- a/css/init.scss
+++ b/css/init.scss
@@ -959,7 +959,9 @@ body:not(.component-library-disclosure) {
 
     &__select {
     font-size: inherit;
+    min-width: rem(420);
     padding: em(8);
+    width: 100%;
     }
 
     &__content {
