--- a/css/init.scss
+++ b/css/init.scss
@@ -166,8 +166,16 @@ margin: em(16) 0;
 
 kbd {
 background-color: #ccc;
+border-radius: 0.25em;
+border: rem(1) dotted black;
 color: #000;
-border: rem(1) dotted black
+display: inline-block;
+font-weight: normal;
+font: inherit;
+line-height: 2;
+margin: 2px;
+padding: 0 0.875em;
+white-space: nowrap;
 }
 
 h1, h2, h3, h4, h5, h6, caption, table {
@@ -276,8 +284,14 @@ font-size: rem(8);
 }
 
 table {
-width: 100%;
+width: 400%;
 border-collapse: collapse;
+
+  @media(min-width: em(680)) {
+
+    width: 100%;
+
+  }
 
   &:target {
   background-color: #eee;
