--- a/css/init.scss
+++ b/css/init.scss
@@ -773,6 +773,27 @@ width: 1px;
 .table-container {
 margin-bottom: em(32);
 overflow-X: auto;
+scrollbar-color: $highlight-color #fff;
+scrollbar-gutter: always; 
+-webkit-overflow-scrolling: touch;
+
+  // Scrollbar styling may be limited cross-browser. This is NOT a bad thing as majority of browsers are WebKit based.
+  // However, if you require full support, then have a look at http://grsmto.github.io/simplebar/
+
+  &::-webkit-scrollbar {
+  height: calc(6em / 16);
+  }
+  
+  /* Track */
+  
+  &::-webkit-scrollbar-track {
+  background-color: #fff;
+  }
+  
+  &::-webkit-scrollbar-thumb {
+  background-color: $highlight-color;
+  }
+
 }
 
 .video-container {
